# mxbi

./: .gitignore  README.md  pyproject.toml
config/: options_session.json
docs/: task.md
services/: mxbi.service
src/mxbi/: __init__.py  config.py  data_logger.py  path.py  scheduler.py  theater.py
src/mxbi/animal_detector/: animal_detector.py  debug_detector.py  dorset_lid665v42_detector.py
src/mxbi/detector/: detector.py  detector_factory.py  dorset_lid665v42_detector.py  mock_detector.py
src/mxbi/models/: animal.py  reward.py  scheduler.py  session.py  task.py
src/mxbi/peripheral/audio_player/controller/: amixer_controller.py  config.py  controller.py  controller_factory.py  mock_controller.py
src/mxbi/peripheral/pumps/: mock_pump.py  pump_factory.py  rasberrypi_gpio_pump.py  rewarder.py
src/mxbi/peripheral/rfid/: dorset_lid665v42.py
src/mxbi/tasks/: task_protocol.py  task_table.py
src/mxbi/tasks/GNGSiD/: models.py
src/mxbi/tasks/GNGSiD/tasks/: artifacts.py
src/mxbi/tasks/default/error_task/: error_scene.py
src/mxbi/tasks/default/idle_task/: idle_scene.py
src/mxbi/tasks/default/initial_habituation_training/: config.json  initial_habituation_training.py  models.py
src/mxbi/tasks/two_alternative_choice/: models.py
src/mxbi/ui/: launch_panel.py
src/mxbi/ui/components/: animal_card.py
src/mxbi/utils/: aplayer.py  audio_control.py  detect_platform.py  logger.py  scene_utils.py
src/mxbi/utils/rewarder/: mock_rewarder.py  rasberrypi_gpio_rewarder.py  rewarder.py  rewarder_protocol.py
src/mxbi/utils/tkinter/: create_circle.py
(+48 files in other folders)
